[package]
name = "example-svelte"
publish = false

[package.version]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
name = "example_svelte_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tracing = "0.1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tauri]
version = "2"
features = ["devtools", "protocol-asset"]

[dependencies.tauri-plugin-svelte]
path = "../../../crates/tauri-plugin-svelte"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
features = ["chrono", "env-filter", "fmt", "parking_lot", "registry"]

[build-dependencies.tauri-build]
version = "2"
features = []
