[package]
name = "example-valtio"
publish = false

[package.version]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.example-shared]
path = "../../shared/rust"
default-features = false

[dependencies.tauri]
version = "2"
features = ["devtools", "protocol-asset"]

[dependencies.tauri-plugin-valtio]
path = "../../../crates/tauri-plugin-valtio"
default-features = false

[build-dependencies.tauri-build]
version = "2"
features = []

[features]
valtio = ["example-shared/valtio"]
file-sync-all = ["example-shared/file-sync-all"]
